# S2_TCVIS

./: .gitignore  Cloudmasking_tests_Phidown.ipynb  README.md  S2_workflow1.ipynb  S2_workflow_1_omc.ipynb  S2_workflow_1_omc_simplified.ipynb  calculate_tc.py  download_scenes.py  mask_scenes.py  medians.py  pyproject.toml
utils/: download.py  mask.py
utils/online/: rio.py  stac.py
utils/spatial/: geom.py  raster.py
